Style: apply editorconfig